// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CHECKIN RENDERING: <CheckInContainer /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#376991",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#a5353e"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Lädt den Fragebogen sowie dessen Status erneut. Die Seite wird neu geladen"
            accessibilityLabel="refresh"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#a5353e",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰑐
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Check-In
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Öffnet eine neue Seite mit zusätzlichen Informationen und Links"
            accessibilityLabel="Zusätzliche Informationen"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#a5353e",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/CUSTOMIZATION/images/logo.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "marginVertical": 5,
          "position": "relative",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 2,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={<View />}
        enableOnAndroid={true}
        innerRef={[Function]}
        onScroll={[Function]}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <View>
          <View />
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`CHECKIN RENDERING: <CheckInListView /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 52.325581395348834,
    }
  }
/>
`;

exports[`CHECKIN RENDERING: <CheckInScreen /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flexDirection": "column",
      "height": "100%",
    }
  }
>
  <Modal
    hardwareAccelerated={false}
    visible={true}
  >
    <View
      style={
        Object {
          "backgroundColor": "#376991",
          "bottom": 0,
          "flex": 1,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <ActivityIndicator
          animating={true}
          color="#a5353e"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Lädt den Fragebogen sowie dessen Status erneut. Die Seite wird neu geladen"
            accessibilityLabel="refresh"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#a5353e",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰑐
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Check-In
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Öffnet eine neue Seite mit zusätzlichen Informationen und Links"
            accessibilityLabel="Zusätzliche Informationen"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#a5353e",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/CUSTOMIZATION/images/logo.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "marginVertical": 5,
          "position": "relative",
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "flex": 2,
        "flexDirection": "column",
        "height": "100%",
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={<View />}
        enableOnAndroid={true}
        innerRef={[Function]}
        onScroll={[Function]}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <View>
          <View />
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;

exports[`CHECKIN RENDERING: <CheckInTiles /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 15,
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "center",
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "center",
      }
    }
  />
</View>
`;

exports[`CHECKIN RENDERING: <CheckInWelcomeText /> can be rendered 1`] = `
<View
  style={
    Object {
      "marginBottom": 43.604651162790695,
      "marginLeft": 52.325581395348834,
      "marginRight": 52.325581395348834,
    }
  }
/>
`;

exports[`CHECKIN RENDERING: <SurveyScreen /> can be rendered 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      Object {
        "alignContent": "stretch",
        "alignItems": "stretch",
        "backgroundColor": "#FFFFFF",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "paddingTop": 30,
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "paddingTop": 10,
          "width": "100%",
          "zIndex": 2,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-end",
            "marginLeft": 15,
            "marginRight": 15,
            "textAlign": "center",
          }
        }
      >
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignContent": "center",
              "alignSelf": "center",
              "color": "#1F2532",
              "flex": 1,
              "fontFamily": "IBMPlexSans-SemiBold",
              "fontSize": 33.75,
              "lineHeight": 43.125,
              "textAlign": "center",
              "width": "100%",
            }
          }
        >
          Fragebogen
        </Text>
        <View
          style={
            Array [
              Object {
                "borderRadius": 3,
                "overflow": "hidden",
              },
              Object {
                "borderRadius": 3,
              },
              undefined,
              false,
            ]
          }
        >
          <View
            accessibilityHint="Öffnet eine neue Seite mit zusätzlichen Informationen und Links"
            accessibilityLabel="Zusätzliche Informationen"
            accessibilityRole="button"
            accessibilityState={
              Object {
                "busy": false,
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "height": 44,
                "opacity": 1,
                "width": 104.65116279069767,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderColor": "#2089dc",
                  "borderRadius": 3,
                  "borderWidth": 0,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "padding": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "overflow": "hidden",
                  }
                }
              >
                <View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "justifyContent": "center",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        Array [
                          Object {
                            "color": "#a5353e",
                            "fontSize": 48.83720930232558,
                          },
                          Object {
                            "backgroundColor": "transparent",
                          },
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                      testID="iconIcon"
                    >
                      󰍜
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <Text
          accessibilityRole="header"
          numberOfLines={1}
          style={
            Object {
              "alignSelf": "center",
              "color": "#1F2532",
              "fontFamily": "IBMPlexSans",
              "fontSize": 30,
              "lineHeight": 39.375,
              "marginBottom": 8.720930232558139,
              "marginTop": -26.162790697674417,
              "position": "relative",
              "textAlign": "center",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <Image
      resizeMode="contain"
      source={
        Object {
          "testUri": "../../../src/CUSTOMIZATION/images/logo.png",
        }
      }
      style={
        Object {
          "alignSelf": "center",
          "flex": 1,
          "marginVertical": 5,
          "position": "relative",
        }
      }
    />
  </View>
  <View />
  <View
    style={
      Object {
        "flex": 2,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <RCTScrollView
        contentContainerStyle={
          Object {
            "flexGrow": 1,
          }
        }
        contentData={
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View />
            <View
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "flex-end",
                  "marginBottom": 36,
                  "marginTop": 20,
                }
              }
            />
          </View>
        }
        enableOnAndroid={true}
        innerRef={[Function]}
        onScroll={[Function]}
        style={
          Object {
            "flex": 1,
            "flexDirection": "column",
            "width": "100%",
          }
        }
      >
        <View>
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "flex": 1,
                "flexDirection": "column",
              }
            }
          >
            <View />
            <View
              style={
                Object {
                  "flex": 1,
                  "height": "100%",
                  "justifyContent": "flex-end",
                  "marginBottom": 36,
                  "marginTop": 20,
                }
              }
            />
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</View>
`;
